welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:11: error: ';' expected but '=' found.
    T[i] = a;
         ^Array1:27: error: identifier expected but integer literal found.
  setCouleurBrosse(t[H-1])
                       ^Array1:30: error: ']' expected but '}' found.
} 
^